update createAccount() method

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
-        <fragment
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:name="com.barmej.bluesea.fragments.UserProfileFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="16dp" />
+
+    <fragment
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/trip_list_container"
             android:name="com.barmej.bluesea.fragments.TripListFragment"/>
-
-    </LinearLayout>
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
