--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorBackground">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/materialCardView"
+        android:id="@+id/card_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -24,7 +24,7 @@
             android:background="@android:color/white">
 
             <TextView
-                android:id="@+id/text_view_date"
+                android:id="@+id/det_text_view_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -38,7 +38,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/text_view_position"
+                android:id="@+id/det_text_view_position"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -49,7 +49,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/imageView2"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_date"
+                app:layout_constraintTop_toBottomOf="@+id/det_text_view_date"
                 tools:text="Kuwait" />
 
             <ImageView
@@ -59,13 +59,13 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="@+id/textView3"
-                app:layout_constraintEnd_toEndOf="@+id/text_view_date"
-                app:layout_constraintStart_toStartOf="@+id/text_view_date"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_date"
+                app:layout_constraintEnd_toEndOf="@+id/det_text_view_date"
+                app:layout_constraintStart_toStartOf="@+id/det_text_view_date"
+                app:layout_constraintTop_toBottomOf="@+id/det_text_view_date"
                 app:srcCompat="@drawable/ic_linear_scale_gray_24dp" />
 
             <TextView
-                android:id="@+id/text_view_destination"
+                android:id="@+id/det_text_view_destination"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -76,7 +76,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/imageView2"
-                app:layout_constraintTop_toBottomOf="@+id/text_view_date"
+                app:layout_constraintTop_toBottomOf="@+id/det_text_view_date"
                 tools:text="Morocco" />
 
             <LinearLayout
@@ -95,7 +95,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
                 <TextView
-                    android:id="@+id/text_available_seats"
+                    android:id="@+id/det_text_available_seats"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -106,7 +106,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/text_view_available_seats_text"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -134,7 +134,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/map_view"
+        android:id="@+id/map"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
