--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,8 +2,13 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-     <item android:id="@+id/action_log_out"
-         android:title="@string/log_out"
-         app:showAsAction="ifRoom" />
+     <item android:id="@+id/action_user_profile"
+         android:title="@string/user_profile"
+         app:showAsAction="never" />
+
+     <item
+         android:id="@+id/action_log_out"
+         android:title="@string/action_log_out"
+         app:showAsAction="never" />
 
 </menu>
