--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -32,13 +32,25 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:src="@drawable/rounded_img"
         app:civ_border_width="2dp"
-        android:src="@drawable/ic_account_circle_black_24dp"
-        app:layout_constraintBottom_toTopOf="@+id/text_input_user_name"
+        app:layout_constraintBottom_toTopOf="@+id/text_view_user_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+    <ImageView
+        android:id="@+id/image_view_upload"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:src="@drawable/ic_file_upload_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_view_user_photo"
+        app:layout_constraintEnd_toEndOf="@+id/image_view_user_photo"
+        app:layout_constraintHorizontal_bias="0.58"
+        app:layout_constraintStart_toStartOf="@+id/image_view_user_photo"
+        android:visibility="gone"/>
+
     <TextView
         android:id="@+id/text_view_user_name"
         android:layout_width="match_parent"
@@ -46,13 +58,43 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textColor="@color/gray"
-        android:textSize="24sp"
-              android:textStyle="bold"
         android:hint="@string/user_name"
+        android:textColor="@color/gray"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_view_user_photo" />
+
+    <TextView
+        android:id="@+id/text_view_user_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:hint="@string/user_email"
+        android:textColor="@color/gray"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_user_name" />
+
+    <TextView
+        android:id="@+id/text_view_user_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:hint="@string/phone_no"
+        android:textColor="@color/gray"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_user_email" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
