--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView3"
+            app:layout_constraintBottom_toBottomOf="@+id/text_view_position"
             app:layout_constraintEnd_toEndOf="@+id/text_view_date"
             app:layout_constraintStart_toStartOf="@+id/text_view_date"
             app:layout_constraintTop_toBottomOf="@+id/text_view_date"
@@ -85,17 +85,17 @@
 
         <TextView
             android:id="@+id/text_view_available_seats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="15dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:text="24"
+            android:visibility="gone"
             android:textColor="@color/colorAccent"
             android:textStyle="bold"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/curr_text_view_position"
+            app:layout_constraintEnd_toStartOf="@+id/text_view_position"
             app:layout_constraintHorizontal_bias="0.95"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
