--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -117,6 +117,16 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
+            <TextView
+                android:id="@+id/text_view_trip_status"
+                android:visibility="gone"
+                android:text="On The Way"
+                android:layout_marginBottom="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/button_book"
@@ -143,6 +153,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                 android:visibility="gone"
                 tools:visibility="visible"/>
 
