--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -99,5 +99,19 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.25" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_input_password"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible"
+        tools:layout_editor_absoluteY="376dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
